welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:17: error: unclosed string literal
		}else if (litMessage()=="B'){
                                        ^BDRBuggle:20: error: Unmatched closing brace '}' ignored here
		}else if (litMessage()=="C"){
                ^BDRBuggle:20: error: illegal start of statement
		}else if (litMessage()=="C"){
                 ^BDRBuggle:33: error: Unmatched closing brace '}' ignored here
									}
                                                                        ^BDRBuggle:39: error: eof expected but '}' found.
			}
                        ^